# ddlog-lsp

./: .gitmodules  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: main.yaml  release.yaml
crates/cli/: Cargo.toml
crates/languages/: Cargo.toml
crates/languages/src/: error.rs  language.rs  lib.rs  parser.rs
crates/macros/: Cargo.toml
crates/macros/src/: language.rs  lib.rs  testing.rs  tree_sitter.rs
crates/macros/src/testing/: corpus_tests.rs
crates/macros/src/tree_sitter/: field_ids.rs  node_kind_ids.rs
crates/macros/src/visitor/: utils.rs
crates/parsers/: Cargo.toml  build.rs
crates/parsers/src/: lib.rs  parser.rs
crates/server/: Cargo.toml
crates/server/src/: analysis.rs  cli.rs  core.rs  handler.rs  lib.rs  package.rs  provider.rs  server.rs
crates/server/src/analysis/: document_symbol.rs  fs.rs  imports.rs
crates/server/src/analysis/document_symbol/: dat.rs  dl.rs
crates/server/src/core/: document.rs  error.rs  future.rs  mod.rs  rope.rs  session.rs  text.rs  tree.rs  workspace_folder.rs
crates/server/src/handler/: text_document.rs  workspace.rs
crates/server/src/lsp/: api.rs  server.rs
crates/server/src/provider/: diagnostics.rs  document_symbol.rs  mod.rs  text_document.rs  workspace.rs
crates/server/src/provider/common/: document_symbol.rs
crates/server/src/provider/common/document_symbol/: dat.rs  dl.rs
crates/server/src/provider/diagnostics/: dat.rs  dl.rs
crates/server/src/provider/document_symbol/: dl.rs
crates/server/src/provider/text_document/: definition.rs  diagnostics.rs  document_symbol.rs
crates/server/src/provider/text_document/diagnostics/: dl.rs
crates/server/src/provider/text_document/document_symbol/: dat.rs  dl.rs
crates/server/src/provider/workspace/: symbol.rs
crates/server/src/service/: mod.rs  synchronizer.rs
crates/server/src/util/: mod.rs  node_walker.rs
crates/server/tests/all/: cli.rs  lsp.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: error.rs  language.rs  lib.rs  node.rs  range.rs
crates/syntax/src/language/: dat.rs  dl.rs  utils.rs
crates/syntax/src/language/dat/: field.rs  keyword.rs  kind.rs  symbol.rs  visitor.rs
crates/syntax/src/language/dat/visitor/: default.rs  validating.rs
crates/syntax/src/language/dl/: field.rs  keyword.rs  kind.rs  symbol.rs  visitor.rs
crates/syntax/src/language/dl/visitor/: default.rs  validating.rs
crates/syntax/src/node/: walker.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs  lsp.rs  service.rs
ddlog_lsp_server/: all.html  index.html  sidebar-items.js
ddlog_lsp_server/analysis/: index.html  sidebar-items.js
ddlog_lsp_server/analysis/document_symbol/: fn.document_symbol.html  fn.document_symbol_from_uri.html  index.html  sidebar-items.js
ddlog_lsp_server/analysis/fs/: fn.documents_within_folder.html  fn.workspace_documents_paths.html  index.html  sidebar-items.js
ddlog_lsp_server/analysis/imports/: fn.collect_imports.html  fn.resolve_import.html  index.html  sidebar-items.js  struct.Import.html  struct.ModulePath.html  struct.ResolvedImport.html
ddlog_lsp_server/analysis/symbol/: index.html
ddlog_lsp_server/core/: enum.DocumentState.html  enum.Error.html  enum.Language.html  enum.SessionResourceKind.html  index.html  sidebar-items.js  struct.Document.html  struct.EagerFuture.html  struct.IntoJsonRpcError.html  struct.Session.html  struct.Text.html  struct.WorkspaceFolder.html  trait.EagerFutureExt.html
ddlog_lsp_server/core/document/: enum.DocumentState.html  struct.Document.html
ddlog_lsp_server/core/error/: enum.Error.html  struct.IntoJsonRpcError.html
ddlog_lsp_server/core/future/: struct.EagerFuture.html  trait.EagerFutureExt.html
ddlog_lsp_server/core/language/: enum.NodeMove.html  index.html  sidebar-items.js  trait.HasWalker.html
ddlog_lsp_server/core/node/: enum.GotoNext.html  enum.StepValue.html  index.html  sidebar-items.js  struct.NodeWalker.html  trait.NodeExt.html
ddlog_lsp_server/core/parser/: fn.dat.html  fn.dl.html  index.html  sidebar-items.js
ddlog_lsp_server/core/range/: index.html  trait.RangeExt.html
ddlog_lsp_server/core/session/: enum.SessionResourceKind.html  struct.Session.html
ddlog_lsp_server/core/text/: struct.Text.html
ddlog_lsp_server/core/workspace_folder/: struct.WorkspaceFolder.html
ddlog_lsp_server/handler/: index.html
ddlog_lsp_server/handler/text_document/: fn.definition.html  fn.did_change.html  fn.did_close.html  fn.did_open.html  fn.document_symbol.html  index.html  sidebar-items.js
ddlog_lsp_server/handler/workspace/: fn.did_change_workspace_folders.html  fn.symbol.html  index.html  sidebar-items.js
ddlog_lsp_server/package/: index.html
ddlog_lsp_server/package/metadata/: constant.CFG_ENDIAN.html  constant.CFG_ENV.html  constant.CFG_FAMILY.html  constant.CFG_OS.html  constant.CFG_POINTER_WIDTH.html  constant.CFG_TARGET_ARCH.html  constant.CI_PLATFORM.html  constant.DEBUG.html  constant.FEATURES.html  constant.FEATURES_STR.html  constant.GIT_COMMIT_HASH.html  constant.GIT_DIRTY.html  constant.GIT_HEAD_REF.html  constant.GIT_VERSION.html  constant.HOST.html  constant.NUM_JOBS.html  constant.OPT_LEVEL.html  constant.PKG_AUTHORS.html  constant.PKG_DESCRIPTION.html  constant.PKG_HOMEPAGE.html  constant.PKG_LICENSE.html  constant.PKG_NAME.html  constant.PKG_REPOSITORY.html  constant.PKG_VERSION.html  constant.PKG_VERSION_MAJOR.html  constant.PKG_VERSION_MINOR.html  constant.PKG_VERSION_PATCH.html  constant.PKG_VERSION_PRE.html  constant.PROFILE.html  constant.RUSTC.html  constant.RUSTC_VERSION.html  constant.RUSTDOC.html  constant.RUSTDOC_VERSION.html  constant.TARGET.html  index.html
ddlog_lsp_server/provider/: index.html  sidebar-items.js
ddlog_lsp_server/provider/common/: index.html  (+1 more)
ddlog_lsp_server/server/: fn.capabilities.html  index.html  struct.Server.html
implementors/lspower/: trait.LanguageServer.js
src/ddlog_lsp_server/: analysis.rs.html  core.rs.html  handler.rs.html  lib.rs.html  package.rs.html  provider.rs.html  server.rs.html
xtask/: Cargo.toml
xtask/src/: main.rs
(+1465 files in other folders)
