[package]
edition = "2018"
name = "ddlog-lsp-cli"
version = "0.0.0"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/ddlog-lsp/ddlog-lsp-server"
keywords = []
description = """
A command-line interface for the DDlog language server.
"""

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "ddlog-lsp"
path = "src/bin/main.rs"

[features]
default = ["runtime-tokio"]
runtime-futures = [
  "blocking",
  "futures",
  "lspower/runtime-agnostic",
  "ddlog-lsp-server/runtime-agnostic",
]
runtime-smol = [
  "lspower/runtime-agnostic",
  "smol",
  "ddlog-lsp-server/runtime-agnostic",
]
runtime-tokio = [
  "lspower/runtime-tokio",
  "tokio",
  "ddlog-lsp-server/runtime-tokio",
]

[build-dependencies]
anyhow = "1.0"
built = { version = "0.4", features = ["git2"] }

[dependencies]
anyhow = "1.0"
blocking = { version = "1.0", optional = true }
clap = "2.33"
ddlog-lsp-server = { version = "0.0", path = "../server", default-features = false }
env_logger = "0.8"
futures = { package = "futures-lite", version = "1.11", optional = true }
lspower = { version = "0.6", default-features = false }
smol = { version = "1.2", optional = true }
tokio = { version = "1.0", features = ["io-std", "macros", "sync"], optional = true }

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
