[package]
edition = "2021"
name = "ddlog-lsp-cli"
version = "0.0.0"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/ddlog-lsp/ddlog-lsp-server"
keywords = []
description = """
A command-line interface for the DDlog language server.
"""

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "ddlog-lsp"
path = "src/bin/main.rs"

[features]
default = ["runtime-tokio"]
runtime-async-std = [
  "async-std",
  "ddlog-lsp-server/runtime-agnostic",
  "lspower/runtime-agnostic",
]
runtime-futures = [
  "blocking",
  "ddlog-lsp-server/runtime-agnostic",
  "futures",
  "lspower/runtime-agnostic",
]
runtime-smol = [
  "ddlog-lsp-server/runtime-agnostic",
  "lspower/runtime-agnostic",
  "smol",
]
runtime-tokio = [
  "ddlog-lsp-server/runtime-tokio",
  "lspower/runtime-tokio",
  "tokio",
]

[build-dependencies]
anyhow = "1.0"
built = { version = "0.5", features = ["git2"] }

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9", optional = true }
blocking = { version = "1.0", optional = true }
clap = "4.0"
ddlog-lsp-server = { version = "0.0", path = "../server", default-features = false }
env_logger = "0.9"
futures = { package = "futures-lite", version = "1.11", optional = true }
lspower = { version = "1.5", default-features = false }
smol = { version = "1.2", optional = true }
tokio = { version = "1.0", features = ["io-std", "macros", "sync"], optional = true }

[dev-dependencies]
predicates = "2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
assert_cmd = "2.0"
