[package]
edition = "2018"
name = "ddlog-lsp-macros"
version = "0.0.0"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/ddlog-lsp/ddlog-lsp"
keywords = []
description = """
Internal macros for the DDlog language server implementation.
"""

[badges]
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
ddlog-lsp-languages = { version = "0.0", path = "../languages" }
glob = "0.3"
heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
thiserror = "1.0"

[dependencies.tree-sitter-sys]
package = "tree-sitter"
version = "0.20"
