[package]
edition = "2018"
name = "ddlog-lsp-server"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/ddlog-lsp/ddlog-lsp"
description = """
A language server implementation for DDlog.
"""

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "ddlog-lsp-server"
path = "src/bin/main.rs"

[features]
default = ["threaded"]
threaded = ["tokio/rt-threaded"]

[build-dependencies]
anyhow = "1.0"
built = { version = "0.4", features = ["git2"] }

[dependencies]
anyhow = "1.0"
clap = "2.33"
dashmap = "3.7"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["io-std", "macros", "sync", "time"] }
tower-lsp = "0.13"
tree-sitter = "0.17"
ddlog-lsp-parsers = { path = "../parsers" }

[package.metadata.cargo-udeps.ignore]
normal = ["env_logger"]
