[package]
edition = "2018"
name = "ddlog-lsp-syntax"
version = "0.0.0"
authors = ["hvithrafn <hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/ddlog-lsp/ddlog-lsp"
keywords = []
description = """
Syntax related definitions for the DDlog language server.
"""

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0"
ddlog-lsp-languages = { version = "0.0", path = "../languages" }
ddlog-lsp-macros = { version = "0.0", path = "../macros" }

[dependencies.tree-sitter]
package = "tree-sitter-facade"
version = "0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tree-sitter-sys]
package = "tree-sitter"
version = "0.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "=0.2.73", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.futures]
package = "futures-lite"
version = "1.11"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-tree-sitter-sys]
version = "0.2"
