[package]
edition = "2018"
name = "ddlog-lsp-testing"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/ddlog-lsp/ddlog-lsp"
keywords = ["lsp", "wasm"]
description = """
Testing support framework for the DDlog language server.
"""

[badges]
maintenance = { status = "experimental" }

[features]
default = ["threaded"]
threaded = ["ddlog-lsp-server/threaded"]

[dependencies]
anyhow = "1.0.28"
ddlog-lsp-server = { path = "../server", version = "0.0.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
tower-lsp = { git = "https://github.com/darinmorrison/tower-lsp", branch = "feature-proposed" }
tower-test = "0.3.0"
